# dify

.claude/: settings.local.json
adapter/: .dockerignore  .env.example  Dockerfile  QUICKSTART.md  README.md  app.py  pyproject.toml
docker/: docker-compose.yaml
docker/nginx/conf.d/: default.conf.template
