[project]
name = "dify-adapter"
version = "1.0.0"
description = "Lightweight API service for Dify applications"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "werkzeug>=3.0.1",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
